--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -64,6 +64,7 @@ It is critical to understanding how the field is developing and where may need f
 
 The Year of Data Collection graph (Panel A in @fig-terrorism-trend) illustrates the frequency of data collection efforts over time. The notable peak in the graph indicates a notable increase in terrorism research following significant global incidents, such as the 9/11 attacks and the rise of the Islamic State (IS). These moments stimulate the academic community to investigate the societal repercussions of terrorism following high-profile incidents. Similarly, the Year of Publications graph (Panel B in @fig-terrorism-trend) demonstrates a concurrent increase in the publication of scholarly works, with notable peaks following major terrorist occurrences. The lag between data collection and publication peaks may indicate the time taken for analysis and peer review. This graph underscores the reactive nature of academic publishing in response to terrorism, the understandings in response to the immediate effects of such incidents and increased potential for saturation of literature after major events.
 
+\newpage
 ```{r }
 #| label: fig-terrorism-trend
 #| fig-cap: Summary of Data Included in the Meta-Analysis
@@ -101,7 +102,7 @@ knitr::include_graphics("../../outputs/figures/Figure2.jpeg")
 
 We use forest plot in @fig-reactions-to-terrorism to illustrate the relationship between terrorism and political attitudes varies by ideology, study design, sample type, and country context. It demonstrates the relationship between terrorism and political attitudes conditional on various substantive and methodological factors. The plot indicates that Islamist terrorism has a more pronounced effect on outgroup hostility, conservative ideological shifts, and rally effects compared to other ideologies. 
 
-We used the following additional packages: broom [@broom], dotwhisker [@dotwhisker], cowplot [@cowplot], metafor [@metafor] in R [@citeR] to create @fig-reactions-to-terrorism.
+We used the following additional packages: `broom` [@broom], `dotwhisker` [@dotwhisker], `cowplot` [@cowplot], `metafor` [@metafor] in `R` [@citeR] to create @fig-reactions-to-terrorism.
 
 ### Outgroup Hostility
 This graph @fig-reactions-to-terrorism presents the Fisher's Z correlation coefficients for the effect of terrorism on outgroup hostility. It demonstrates that terrorism associated with Islamism tends to have a stronger correlation with outgroup hostility than other ideologies. This could reflect media portrayal and public perception biases, where Islamist are more closely associated with the concept of terrorism. The sample type and country also moderate the correlation, with general population samples showing a more substantial effect than student or convenience samples, and the United States showing a stronger correlation than Israel or other countries. In general, other ideologies, or the no ideological label, provoke less intense reactions, suggesting public sensitivity to the context of terrorist events.
@@ -141,7 +142,8 @@ knitr::include_graphics("../../outputs/figures/Figure3.jpeg")
 
 # Discussion {#sec-data}
 
-Investigating terrorism’s effects through public attitudes towards politics is necessary to detect the social reaction to such thought-provoking disasters. Starting from Amélie Godefroidt’s pioneering study (@Godefroidt2023), this paper takes her insights further and tries to bring in more deterministic factors that may work towards shaping public opinion related to terrorism. However, both Mia and I agree on the implications of ethics, limitations, and future hopeful prospects.
+Investigating terrorism’s effects through public attitudes towards politics is necessary to detect the social reaction to such thought-provoking disasters. Starting from Amélie Godefroidt’s pioneering study [@Godefroidt2023], this paper takes her insights further and tries to bring in more deterministic factors that may work towards shaping public opinion related to terrorism. However, we all agree on the implications of ethics, limitations, and future hopeful prospects.
+
 ## Findings
 
 Our research proves to be only an addition to Godefroidt's theory; however, our findings clearly point to the direct effects of terrorist acts on citizens' political attitudes. One striking feature here is that of hatred for out-group members and political conservatism of the public following such catastrophes. This affirms that terror creates a feeling of insecurity and a need for safety, which is a reason for a more cautious political position. Also, our results put emphasis on the way terrorism is shaped in the influence of terrorism. For instance, ideological violence perpetrated in the name of Islam seems to have a tremendous amplifying impact and induces much stronger responses than violence underpinned by other ideologies. This is in accord with former studies focusing on the specific consequences of Islamist extremism on Western countries that associate the latter with the idea of cultural and national identity. Thus, it is considered a threat to civic and national identity.
@@ -162,7 +164,7 @@ To rectify these limitations as well as bring clarity into how terrorism changes
 
 # Conclusion
 
-Our study builds upon and extends the insightful work of Amélie Godefroidt (@Godefroidt2023), presenting new perspectives on the influence of terrorism on political attitudes. Through comprehensive analysis and extension of previous research, it highlights the significant ways in which terrorism leads shifts towards outgroup hostility, political conservatism, and affects public opinion across various contexts. This paper underscores the importance of considering the sociopolitical environment when evaluating the impact of terrorism and suggests a nuanced understanding of its effects is important for formulating policies. In moving forward, we suggest an inclusive approach to research that encompasses a broader spectrum of terrorist ideologies and embraces different methodologies to capture the influence of terrorism in our society. This approach not only contributes to the academic discussion on terrorism and democracy but also offers practical insights for policymakers to navigate the challenges posed by terrorism.
+Our study builds upon and extends the insightful work of Amélie Godefroidt [@Godefroidt2023], presenting new perspectives on the influence of terrorism on political attitudes. Through comprehensive analysis and extension of previous research, it highlights the significant ways in which terrorism leads shifts towards outgroup hostility, political conservatism, and affects public opinion across various contexts. This paper underscores the importance of considering the sociopolitical environment when evaluating the impact of terrorism and suggests a nuanced understanding of its effects is important for formulating policies. In moving forward, we suggest an inclusive approach to research that encompasses a broader spectrum of terrorist ideologies and embraces different methodologies to capture the influence of terrorism in our society. This approach not only contributes to the academic discussion on terrorism and democracy but also offers practical insights for policymakers to navigate the challenges posed by terrorism.
 
 \newpage
 
